--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
   display: flex;
+  margin-bottom: 100px;
 }
 .half-width{
   width: 50%;
@@ -32,4 +33,9 @@ width: 80%;
 .top-banner{
   background-image:url(images/top-banner.png) ;
   background-repeat: no-repeat;
+}
+.dream-big{
+background-image: url(images/dream-bg.png);
+background-repeat: no-repeat;
+background-position: right;
 }
